# decomp-goal-harness

./: .gitignore  .pre-commit-config.yaml  README.md  decomp-goal.toml  pyproject.toml
examples/toy_match/: attempt.start.c  decomp-goal.toml  decompiler-ghidra.txt  original.c  sample_objdiff.json  score.py
examples/toy_match/variants/: fix-attempt-start.patch  noop-comment.patch  worse-attempt.patch
scripts/: smoke.sh
src/decomp_goal/: __init__.py  cli.py
tests/: test_cli_contracts.py
