[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "decomp-goal-harness"
version = "0.1.0"
description = "A small harness for agent-driven matching decompilation goals."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Muhtasham" }]

[project.scripts]
decomp-goal = "decomp_goal.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.0",
    "ruff>=0.15.12",
    "ty>=0.0.35",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
